// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MilestonesList structural/snapshot tests edge cases matches the structural snapshot when a currency-mismatch warning is present 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <div
      class="flex items-center gap-3"
    >
      <button
        aria-label="Switch to compact density"
        aria-pressed="false"
        class="inline-flex items-center gap-1.5 rounded-full border border-slate-300 px-3 py-1 text-xs font-medium text-slate-600 transition-colors hover:border-slate-400 hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-3.5 w-3.5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Comfortable
      </button>
      <span
        class="text-sm text-slate-500"
        id="milestones-count"
      >
        2
         total
      </span>
    </div>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  />
  <div
    aria-label="Milestone status summary"
    class="flex flex-wrap gap-2 mt-4"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        2
      </span>
    </span>
  </div>
  <div
    class="mt-4 rounded-2xl border border-amber-300 bg-amber-50 p-4 text-sm text-amber-950"
    role="alert"
  >
    <p
      class="font-semibold"
    >
      1
       
      milestone uses
       
      EUR
       instead of 
      USD
      .
    </p>
    <ul
      class="mt-2 list-disc space-y-1 pl-5"
    >
      <li>
        Foreign milestone
        : 
        €400.00
      </li>
    </ul>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    data-testid="milestones-announcement"
    role="status"
  />
  <span
    aria-atomic="true"
    aria-label="Milestone selection announcements"
    aria-live="polite"
    class="sr-only"
    role="status"
  />
  <div
    aria-label="Milestone selection controls"
    class="flex items-center mt-4"
    role="group"
  >
    <label
      class="flex items-center gap-2 text-sm text-slate-600"
    >
      <input
        aria-checked="false"
        aria-label="Select all milestones"
        class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
        type="checkbox"
      />
      <span>
        Select all
      </span>
    </label>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2 mt-6 space-y-4"
    role="region"
    tabindex="0"
  >
    <article
      aria-label="Local milestone"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m1"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Local milestone"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Local milestone
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2025-01-01
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Pending"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⏳
              </span>
              Pending
            </span>
            <button
              aria-label="Edit milestone Local milestone"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m1"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m1"
        >
          $500.00
        </p>
      </div>
    </article>
    <article
      aria-label="Foreign milestone"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m2"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Foreign milestone"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Foreign milestone
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2025-01-02
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Pending"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⏳
              </span>
              Pending
            </span>
            <button
              aria-label="Edit milestone Foreign milestone"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m2"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m2"
        >
          €400.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests edge cases matches the structural snapshot when the due-soon reminder banner is present 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <div
      class="flex items-center gap-3"
    >
      <button
        aria-label="Switch to compact density"
        aria-pressed="false"
        class="inline-flex items-center gap-1.5 rounded-full border border-slate-300 px-3 py-1 text-xs font-medium text-slate-600 transition-colors hover:border-slate-400 hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-3.5 w-3.5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Comfortable
      </button>
      <span
        class="text-sm text-slate-500"
        id="milestones-count"
      >
        1
         total
      </span>
    </div>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  />
  <div
    aria-label="Milestone status summary"
    class="flex flex-wrap gap-2 mt-4"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <div
    class="mt-6 flex items-start gap-3 rounded-3xl border border-amber-200 bg-amber-50/50 p-4 text-amber-900 shadow-sm backdrop-blur-sm dark:border-amber-500/20 dark:bg-amber-500/5 dark:text-amber-200"
    role="status"
  >
    <div
      class="flex-1"
    >
      <p
        class="font-semibold text-sm"
      >
        1
         
        milestone is
         due within 
        7
         days
      </p>
      <ul
        class="mt-1.5 flex flex-wrap gap-x-3 gap-y-1 text-xs text-amber-800 dark:text-amber-300"
      >
        <li
          class="flex items-center gap-1.5"
        >
          <a
            class="font-medium underline hover:text-amber-950 dark:hover:text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500 focus-visible:ring-offset-2 rounded"
            href="#milestone-m1"
          >
            Urgent milestone
          </a>
        </li>
      </ul>
    </div>
    <button
      aria-label="Dismiss reminder"
      class="inline-flex h-6 w-6 shrink-0 items-center justify-center rounded-full text-amber-600 hover:bg-amber-100 hover:text-amber-800 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-amber-500 focus-visible:ring-offset-1 dark:text-amber-400 dark:hover:bg-amber-500/10 dark:hover:text-amber-200 transition-colors"
      type="button"
    >
      <span
        aria-hidden="true"
        class="text-lg leading-none"
      >
        ×
      </span>
    </button>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    data-testid="milestones-announcement"
    role="status"
  />
  <span
    aria-atomic="true"
    aria-label="Milestone selection announcements"
    aria-live="polite"
    class="sr-only"
    role="status"
  />
  <div
    aria-label="Milestone selection controls"
    class="flex items-center mt-4"
    role="group"
  >
    <label
      class="flex items-center gap-2 text-sm text-slate-600"
    >
      <input
        aria-checked="false"
        aria-label="Select all milestones"
        class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
        type="checkbox"
      />
      <span>
        Select all
      </span>
    </label>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2 mt-6 space-y-4"
    role="region"
    tabindex="0"
  >
    <article
      aria-label="Urgent milestone"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m1"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Urgent milestone"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Urgent milestone
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2026-01-03
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Pending"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⏳
              </span>
              Pending
            </span>
            <button
              aria-label="Edit milestone Urgent milestone"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m1"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m1"
        >
          $750.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests edge cases renders "Due TBD" and matches the snapshot when a milestone has no dueDate 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <div
      class="flex items-center gap-3"
    >
      <button
        aria-label="Switch to compact density"
        aria-pressed="false"
        class="inline-flex items-center gap-1.5 rounded-full border border-slate-300 px-3 py-1 text-xs font-medium text-slate-600 transition-colors hover:border-slate-400 hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-3.5 w-3.5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Comfortable
      </button>
      <span
        class="text-sm text-slate-500"
        id="milestones-count"
      >
        1
         total
      </span>
    </div>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  />
  <div
    aria-label="Milestone status summary"
    class="flex flex-wrap gap-2 mt-4"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    data-testid="milestones-announcement"
    role="status"
  />
  <span
    aria-atomic="true"
    aria-label="Milestone selection announcements"
    aria-live="polite"
    class="sr-only"
    role="status"
  />
  <div
    aria-label="Milestone selection controls"
    class="flex items-center mt-4"
    role="group"
  >
    <label
      class="flex items-center gap-2 text-sm text-slate-600"
    >
      <input
        aria-checked="false"
        aria-label="Select all milestones"
        class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
        type="checkbox"
      />
      <span>
        Select all
      </span>
    </label>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2 mt-6 space-y-4"
    role="region"
    tabindex="0"
  >
    <article
      aria-label="Undated milestone"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m1"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Undated milestone"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Undated milestone
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                TBD
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Pending"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⏳
              </span>
              Pending
            </span>
            <button
              aria-label="Edit milestone Undated milestone"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m1"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m1"
        >
          $100.00
        </p>
      </div>
    </article>
  </div>
</section>
`;

exports[`MilestonesList structural/snapshot tests empty state matches the structural snapshot for an empty list 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <div
      class="flex items-center gap-3"
    >
      <button
        aria-label="Switch to compact density"
        aria-pressed="false"
        class="inline-flex items-center gap-1.5 rounded-full border border-slate-300 px-3 py-1 text-xs font-medium text-slate-600 transition-colors hover:border-slate-400 hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-3.5 w-3.5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Comfortable
      </button>
      <span
        class="text-sm text-slate-500"
        id="milestones-count"
      >
        0
         total
      </span>
    </div>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  />
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    data-testid="milestones-announcement"
    role="status"
  />
  <span
    aria-atomic="true"
    aria-label="Milestone selection announcements"
    aria-live="polite"
    class="sr-only"
    role="status"
  />
  <div
    class="max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2 mt-6 space-y-4"
  />
</section>
`;

exports[`MilestonesList structural/snapshot tests loaded state matches the structural snapshot for a populated list 1`] = `
<section
  aria-labelledby="milestones-title"
  class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
>
  <div
    class="flex items-center justify-between gap-4"
  >
    <h2
      class="text-xl font-semibold text-slate-900"
      id="milestones-title"
    >
      Milestones
    </h2>
    <div
      class="flex items-center gap-3"
    >
      <button
        aria-label="Switch to compact density"
        aria-pressed="false"
        class="inline-flex items-center gap-1.5 rounded-full border border-slate-300 px-3 py-1 text-xs font-medium text-slate-600 transition-colors hover:border-slate-400 hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-3.5 w-3.5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Comfortable
      </button>
      <span
        class="text-sm text-slate-500"
        id="milestones-count"
      >
        3
         total
      </span>
    </div>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  />
  <div
    aria-label="Milestone status summary"
    class="flex flex-wrap gap-2 mt-4"
    role="list"
  >
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-info-bg)] text-[var(--status-info-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ✓
      </span>
      Completed
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-error-bg)] text-[var(--status-error-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⚠
      </span>
      Disputed
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
    <span
      class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)]"
      role="listitem"
    >
      <span
        aria-hidden="true"
      >
        ⏳
      </span>
      Pending
      <span
        class="ml-0.5 rounded-full bg-white/40 px-1.5 py-0.5 text-[10px] font-bold leading-none"
      >
        1
      </span>
    </span>
  </div>
  <span
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    data-testid="milestones-announcement"
    role="status"
  />
  <span
    aria-atomic="true"
    aria-label="Milestone selection announcements"
    aria-live="polite"
    class="sr-only"
    role="status"
  />
  <div
    aria-label="Milestone selection controls"
    class="flex items-center mt-4"
    role="group"
  >
    <label
      class="flex items-center gap-2 text-sm text-slate-600"
    >
      <input
        aria-checked="false"
        aria-label="Select all milestones"
        class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
        type="checkbox"
      />
      <span>
        Select all
      </span>
    </label>
  </div>
  <div
    aria-labelledby="milestones-title milestones-count"
    class="max-h-[calc(100vh-260px)] overflow-y-auto pr-2 rounded-2xl focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] focus-visible:ring-offset-2 mt-6 space-y-4"
    role="region"
    tabindex="0"
  >
    <article
      aria-label="Kickoff call"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m1"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Kickoff call"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Kickoff call
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2025-01-01
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Completed"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-info-bg)] text-[var(--status-info-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ✓
              </span>
              Completed
            </span>
            <button
              aria-label="Edit milestone Kickoff call"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m1"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m1"
        >
          $1,200.00
        </p>
      </div>
    </article>
    <article
      aria-label="Design handoff"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m2"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Design handoff"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Design handoff
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2025-02-01
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Pending"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-warning-bg)] text-[var(--status-warning-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⏳
              </span>
              Pending
            </span>
            <button
              aria-label="Edit milestone Design handoff"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m2"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m2"
        >
          $3,400.00
        </p>
      </div>
    </article>
    <article
      aria-label="Final delivery"
      class="rounded-3xl border p-4 shadow-sm transition-colors border-slate-200 bg-slate-50"
      data-selected="false"
      id="milestone-m3"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="pt-1"
        >
          <input
            aria-label="Select Final delivery"
            class="h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500"
            type="checkbox"
          />
        </div>
        <div
          class="flex flex-1 flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
        >
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-sm font-medium text-slate-600"
            >
              Final delivery
            </p>
            <div
              class="mt-1 flex flex-wrap items-center gap-3 text-sm text-slate-500"
            >
              <span>
                Due 
                2025-03-01
              </span>
              <span
                aria-hidden="true"
                class="text-slate-300"
              >
                •
              </span>
              <span
                aria-label="No date available"
                class="text-sm text-slate-500"
              >
                —
              </span>
            </div>
          </div>
          <div
            class="flex items-center gap-3"
          >
            <span
              aria-label="Status: Disputed"
              class="inline-flex items-center gap-1 rounded-full px-3 py-1 text-sm font-semibold bg-[var(--status-error-bg)] text-[var(--status-error-foreground)] "
              role="status"
            >
              <span
                aria-hidden="true"
              >
                ⚠
              </span>
              Disputed
            </span>
            <button
              aria-label="Edit milestone Final delivery"
              class="inline-flex items-center gap-1 rounded-full border border-slate-300 bg-white px-3 py-1 text-xs font-semibold text-slate-700 shadow-sm transition-colors hover:bg-slate-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500 focus-visible:ring-offset-2"
              data-testid="edit-milestone-m3"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ✎
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex items-center justify-between gap-4 border-t border-slate-200 pt-4 text-sm text-slate-600"
      >
        <p>
          Payout
        </p>
        <p
          class="font-semibold text-slate-900"
          data-testid="milestone-payout-m3"
        >
          $5,000.00
        </p>
      </div>
    </article>
  </div>
</section>
`;
